# bankmind

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
app/: charts.py  main.py  query_pipeline.py
data/eval/: _qa_summary.json  compliance_qa.json  credit_qa.json
data/eval/source_passages/: _summary.json  compliance_passages.json  credit_passages.json
docs/: WORK_LOG.md
evaluation/: evaluator.py  passage_extractor.py  qa_generator.py
evaluation/results/: _alpha_sweep_summary.json  _chunking_benchmark_summary.json  _dimension_sweep_summary.json  _pca_summary.json
evaluation/results/compliance/: chunking_benchmark.json  dimension_sweep.json  hybrid_convex_alpha_sweep.json  pca_eigenstructure.json  retrieval_benchmark.json
evaluation/results/credit/: chunking_benchmark.json  dimension_sweep.json  hybrid_convex_alpha_sweep.json  pca_eigenstructure.json  retrieval_benchmark.json
pipelines/compliance/: chunker.py
pipelines/credit/: chunker.py
pipelines/shared/: chunking_base.py  document_parser.py  embedder.py  fusion.py  guardrails.py  llm.py  pca_analyzer.py  qdrant_client.py  query_logger.py  query_transformer.py  reranker.py  retriever.py  semantic_chunker.py  sparse_encoder.py
scripts/: download_compliance_docs.py  download_edgar_filings.py  embed_and_load.py  embed_and_load_all.sh  extract_source_passages.py  generate_qa_pairs.py  parse_documents.py  run_chunking.py  run_chunking_benchmark.py  run_dimension_sweep.py  run_pca_analysis.py  run_retrieval_benchmark.py  sanity_check_qdrant.py  setup_qdrant_collections.py  smoke_test_retrieval.py  sweep_hybrid_convex_alpha.py
